force-app/main/default/objects/Sensor_Event__c/Sensor_Event__c.object-meta.xml
<CustomObject>
    <label>Sensor_Event</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Sensor_Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensor_Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>