force-app/main/default/objects/Sensor_Event__c/fields/Modulus_Vector_Length__c.field-meta.xml
<CustomField>
    <fullName>Modulus_Vector_Length__c</fullName>
    <description
  >This field shows result: Modulus_Vector_Length (√x2 + y2 + z 2)</description>
    <formula>SQRT( x__c  ^  2 +  y__c  ^  2 +  z__c  ^  2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Read only field, you can&apos;t edit this field.</inlineHelpText>
    <label>Modulus_Vector_Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>