force-app/main/default/objects/Sensor_Event__c/fields/Sensor__c.field-meta.xml
<CustomField>
    <fullName>Sensor__c</fullName>
    <description
  >In this field you must enter particular Sensor from list.</description>
    <inlineHelpText>Please enter sensor.</inlineHelpText>
    <label>Sensor</label>
    <referenceTo>Sensor__c</referenceTo>
    <relationshipLabel>Sensor_Events</relationshipLabel>
    <relationshipName>Sensor_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>