force-app/main/default/objects/Sensor_Event__c/fields/x__c.field-meta.xml
<CustomField>
    <fullName>x__c</fullName>
    <description>In this field You must enter x coordinate.</description>
    <inlineHelpText>Please, enter &quot;x&quot; coordinate.</inlineHelpText>
    <label>x</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>