force-app/main/default/objects/Sensor_Event__c/fields/y__c.field-meta.xml
<CustomField>
    <fullName>y__c</fullName>
    <description>In this field you must enter y coordinate.</description>
    <inlineHelpText>Please enter &quot;y&quot; coordinate.</inlineHelpText>
    <label>y</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>