force-app/main/default/objects/Sensor_Event__c/fields/z__c.field-meta.xml
<CustomField>
    <fullName>z__c</fullName>
    <description>In this field you must enter z coordinate</description>
    <inlineHelpText>Please, enter &quot;z&quot; coordinate</inlineHelpText>
    <label>z</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>